--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@react-three/drei": "9.122.0",
     "@react-three/fiber": "8.17.7",
-    "next": "^14.2.35",
+    "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "three": "0.165.0"
